Fixed bug where sign-out in the navbar would disappear on small screens

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,9 +3,6 @@ body {
     padding-top: 70px;
 }
 
-.classlist {
-}
-
 /* Sidebar/Classlist */
 .sidebar {
     min-height: calc(100vh - 50px);
